[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "http-validator"
version = "0.1.0"
description = "Simple website link crawler and HTTP validator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.6",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "elasticsearch>=8.12,<9",
]

[project.scripts]
http-validator = "http_validator.cli:run"
http-validator-api = "http_validator.api.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
